# omdb-rs

./: Cargo.toml
src/: error.rs  lib.rs
src/query/: mod.rs
