[package]
name = "omdb"
version = "0.1.2"
authors = ["Brandon Aldrich <brandon@aldr.io>"]
description = "OMDb API for Rust"
documentation = "https://docs.rs/crate/omdb"
homepage = "https://github.com/aldrio/omdb-rs"
repository = "https://github.com/aldrio/omdb-rs"
readme = "README.md"
license = "MIT"

[dependencies]
hyper = "0.12"
hyper-native-tls = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.3"
reqwest = "0.9"